# rust-fs-erofs

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
include/: fs_erofs.h
src/: acl.rs  capi.rs  chunked.rs  decompress.rs  dir.rs  error.rs  fs.rs  inode.rs  layout.rs  lib.rs  mkfs.rs  superblock.rs  xattr.rs  zmap.rs
tests/: cli.rs  large_files.rs  oracle_compat.rs  oracle_gsi.rs  oracle_writer.rs  round_trip.rs  stress.rs
tests/common/: mod.rs
tests/fixtures/: README.md  download-gsi.sh
